src/gallium/drivers/radeon/radeon_vce.c
@@ -549,7 +549,7 @@ void rvce_add_buffer(struct rvce_encoder *enc, struct pb_buffer *buf,
 		RVCE_CS(addr >> 32);
 		RVCE_CS(addr);
 	} else {
-		offset += enc->ws->buffer_get_virtual_address(buf);
+		offset += enc->ws->buffer_get_reloc_offset(buf);
 		RVCE_CS(reloc_idx * 4);
 		RVCE_CS(offset);
 	}
